fix problem with button on safari

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@ body {
   border: #db3838;
   outline: none;
   cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .btn:hover {
@@ -181,7 +184,7 @@ body {
   }
   .btn__submit {
     font-size: 16px;
-    padding: 21px 13px;
+    padding: 21px 13px 20px;
     width: 25%;
   }
 }
